temp/objects/RevRecRules__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amortize_By__c</fullName>
        <label>Amortize By-Delete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                    <default>true</default>
                    <label>Amount</label>
                </value>
                <value>
                    <fullName>qty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Rule description field</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Divide_By__c</fullName>
        <label>Divide By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Divide Evenly Between Start and End Dates</fullName>
                </value>
                <value>
                    <fullName>Divide Evenly Between Start and End Dates - Prorate First and Last Periods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enable_Manual_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Manual Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Percentage__c</fullName>
        <label>End Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_With_Zero_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast with Zero Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Amount_Type__c</fullName>
        <label>Initial Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Amount__c</fullName>
        <label>Initial Amount:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Split_Categories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Split Categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Projected_Type__c</fullName>
        <label>Milestone Projected Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>amount</fullName>
                </value>
                <value>
                    <fullName>qty</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_Type__c</fullName>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>amount</fullName>
                </value>
                <value>
                    <fullName>qty</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offset_Period__c</fullName>
        <label>Offset Period:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offset_Type__c</fullName>
        <label>Offset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_or_Exact_Days__c</fullName>
        <label>Period or Exact Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Period</fullName>
                </value>
                <value>
                    <fullName>By Exact Days</fullName>
                </value>
                <value>
                    <fullName>By Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recognition_Type__c</fullName>
        <label>Recognition Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_Amount_Type__c</fullName>
        <label>Residual Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residual_Amount__c</fullName>
        <label>Residual Amount:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Percentage__c</fullName>
        <label>Start Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>RevRecRule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>